# ballsack

./: .gitignore  Cargo.toml  README.md
crates/ballsack-core/: Cargo.toml
crates/ballsack-core/src/: lib.rs
crates/ballsack-core/src/adapters/: mod.rs  playback.rs  room_state.rs
crates/ballsack-core/src/adapters/crypto/: e2ee.rs  identity.rs  mod.rs
crates/ballsack-core/src/adapters/media/: audio.rs  clock.rs  mod.rs  video.rs
crates/ballsack-core/src/adapters/quic/: client.rs  codec.rs  server.rs
crates/ballsack-core/src/application/: bitrate_adapt.rs  handle_control.rs  join_room.rs  key_distribute.rs  key_rotation.rs  mod.rs  ports.rs  receive_media.rs  send_media.rs  stats.rs
crates/ballsack-core/src/domain/: control.rs  identity.rs  media.rs  mod.rs
crates/ballsack-desktop/: Cargo.toml  tauri.conf.json
crates/ballsack-desktop/capabilities/: default.json
crates/ballsack-desktop/src/: commands.rs  events.rs  main.rs  state.rs
crates/ballsack-desktop/ui/: index.html  package-lock.json  package.json
crates/ballsack-desktop/ui/src/: App.tsx
crates/ballsack-desktop/ui/src/components/: CallControls.tsx  PeerList.tsx  StatsPanel.tsx
crates/ballsack-desktop/ui/src/hooks/: useTauriEvents.ts
crates/ballsack-desktop/ui/src/lib/: invoke.ts
crates/ballsack-server/: Cargo.toml
crates/ballsack-server/src/: main.rs
