[package]
name = "ballsack-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ballsack-desktop"
path = "src/main.rs"

[dependencies]
ballsack-core = { path = "../ballsack-core" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
